tests/baselines/reference/topLevelAwaitErrors.5(module=es2022).errors.txt
tests/cases/conformance/externalModules/topLevelAwaitErrors.5.ts(2,14): error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.


==== tests/cases/conformance/externalModules/topLevelAwaitErrors.5.ts (1 errors) ====
    // await in exported class name should fail
    export class await {
                 ~~~~~
!!! error TS1262: Identifier expected. 'await' is a reserved word at the top-level of a module.
    }
    